--- a/.github/workflows/Build_OP_Redmi_AX6_Miacis.yml
+++ b/.github/workflows/Build_OP_Redmi_AX6_Miacis.yml
@@ -26,6 +26,9 @@ on:
   # 手动触发，https://learn.microsoft.com/zh-cn/training/modules/github-actions-automate-tasks/2c-configure-github-actions-workflow
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
